syntax = "proto3";
option java_multiple_files = true;
package com.github.anjeyy.proto.document;

import "google/protobuf/empty.proto";


message DocumentRequest{
  string docId = 1;
}

message DocumentResponse{
  string docId = 1;
  string title = 2;
  string person = 3;
  int32 filesize = 4;
}

message DocumentResponseList{
  repeated DocumentResponse documentResponse = 1;
}

service DocumentService{
  rpc getAllDocuments(google.protobuf.Empty) returns (stream DocumentResponse);
  rpc getAllDocumentsAsList(google.protobuf.Empty) returns(DocumentResponseList);
  rpc getDocumentById(DocumentRequest) returns (DocumentResponse);
}

